fix: resolved dropdown items not showing error in services

--- a/public/scss/components/login.scss
+++ b/public/scss/components/login.scss
@@ -454,7 +454,7 @@ Login Section
   border: none;
 }
 .login-modal {
-  max-width: 750px;
+  max-width: 700px;
   box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
   border-radius: 8px;
 
